some changes for videor

--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
 
             <div class="section2-images col-6">
                 <img src="./images/tv.png" alt="">
+                <video src="/images/tvvideo.m4v" controls autoplay></video>
             </div>
 
         </div>
@@ -71,7 +72,8 @@
         <div class=" section3-main container row m-auto">
 
             <div class="section3-images col-6">
-                <img src="./images/mobile.jpg" alt="">
+                <img src="./images/mobile.png" alt="">
+
             </div>
 
             <div class="section3-Content col-6">
