--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
             <div class="section2-images col-6">
                 <img src="./images/tv.png" alt="">
-                <video src="/images/tvvideo.m4v" controls autoplay></video>
+                <video src="./images/tvvideo.m4v" controls autoplay></video>
             </div>
 
         </div>
